--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portifolio - Guilherme S.</title>
+    
+        <meta name="description" content="Olá, sou um desenvolvedor front-end apaixonado por criar soluções digitais que realmente fazem a diferença. Meu foco está em entregar interfaces intuitivas e funcionais, que ofereçam uma experiência incrível para os usuários.
+                      Tenho mais de 5 meses de experiência prática trabalhando com tecnologias como React.js, Styled Components, Context API, Axios e React Router DOM, sempre buscando criar interfaces dinâmicas e responsivas. Além disso, também tenho conhecimento em JavaScript, Node.js, APIs REST, PHP e MySQL, o que me permite colaborar em projetos full-stack de forma versátil.
+                      Sou movido pela curiosidade e pela vontade de aprender, e acredito que cada novo desafio é uma oportunidade para crescer e criar algo especial. Se você valoriza soluções criativas e bem construídas, vamos conversar!" />
+        <meta name="keywords" content="Portifolio dev, React.js, node.js, desenvolvedor front end, desenvolvedor back end, Portifolio, Desenvolvimento de Software,Desenvolvimento de Aplicações,Front-end Developer,Back-end Developer,Full-stack Developer,Desenvolvimento de Aplicações,Soluções Web Personalizadas" />
+      <meta name="google-site-verification" content="NmTMStmen1KCEUyIsY9h3KYUOvJoEYHaG2LW4qzNwpk" />
   </head>
   <body>
     <div id="root"></div>
